test against default gc, tuned g1, and zgenerational