@@ -57,8 +57,9 @@ knowledge required. Full formal definition in `scientific-findings.md` #11.
 That's the whole point of building MSPC in the first place: a number you can watch go
 down as the fill algorithm improves, instead of an average that hides whether it
 actually did. See `scientific-findings.md` #13 for the thread-pool experiment that
-motivated bumping the mosaic tile size, and #14 for the full chart set (percentiles
-per run, total time, and confirmed worker counts).
+motivated bumping the mosaic tile size, #14 for a three-way GC comparison (default G1
+vs. a throughput-tuned G1 vs. ZGC, all at a fixed pretouched heap), and #15 for the
+full chart set.
 
 To test a different `Util.getMaxThreads()` cap without editing code:
 
@@ -72,6 +73,19 @@ an 8-core box any `N ≥ 7` clamps to the same 7 workers you already had — onl
 the `4` above) actually changes anything. Verified live with `jcmd <pid> Thread.print` in
 `scientific-findings.md` #13, which also has the more interesting follow-up: cutting workers
 from 7 to 4 didn't cost any measurable throughput either.
+
+To try a different garbage collector (or any other raw JVM flags):
+
+```
+./gradlew run -PgcArgs="-Xms16g -Xmx16g -XX:+AlwaysPreTouch -XX:+UseZGC"
+```
+
+`-PgcArgs` is a plain string, space-split into `jvmArgs` — pass whatever flags you want.
+Every run now logs `Active GC(s): ...` at startup (via `ManagementFactory.getGarbageCollectorMXBeans()`),
+so you can confirm what actually loaded instead of trusting the flag. `scientific-findings.md`
+#14 ran this three ways (default G1, a throughput-tuned G1, and generational ZGC) at a fixed
+16GB pretouched heap — ZGC came out ~6% ahead across every MSPC percentile, G1's own tuning
+knob made basically no difference.
 
 ## Project layout
 
